--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,8 +15,6 @@ concurrency:
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
-    env:
-      CUSTOM_DOMAIN: ${{ secrets.CUSTOM_DOMAIN }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -33,17 +31,13 @@ jobs:
       - name: Build static export
         env:
           NODE_ENV: production
-        run: |
-          npm run build
-          # Next.js export is implicit with output: export; it creates 'out'
-          node fix-paths.js || echo 'fix-paths script finished'
+        run: npm run build
 
       - name: Add .nojekyll
         run: echo > out/.nojekyll
 
-      - name: Add CNAME (custom domain)
-        if: env.CUSTOM_DOMAIN
-        run: echo "$CUSTOM_DOMAIN" > out/CNAME
+      - name: Add CNAME
+        run: echo "storoo.fr" > out/CNAME
 
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v4
@@ -54,8 +48,4 @@ jobs:
 
       - name: Post-deploy summary
         run: |
-          if [ -n "$CUSTOM_DOMAIN" ]; then
-            echo "Deployment complete: https://$CUSTOM_DOMAIN/" >> $GITHUB_STEP_SUMMARY
-          else
-            echo "Deployment complete: https://storoo.github.io/math.storoo/" >> $GITHUB_STEP_SUMMARY
-          fi
+          echo "Deployment complete: https://storoo.fr/" >> $GITHUB_STEP_SUMMARY
