--- a/data/site-config.json
+++ b/data/site-config.json
@@ -14,7 +14,7 @@
     "social": [
       { "type": "email", "url": "mailto:santiago.torooquendo@gmail.com" },
       { "type": "github", "url": "https://github.com/storoo" },
-      {"type": "cv", "url": "./research/files/Santiago_Toro_Oquendo_CV.pdf"} 
+      {"type": "cv", "url": ""} 
     ]
   },
   "research": {
