Added DS2026 AL

--- a/data/site-config.json
+++ b/data/site-config.json
@@ -201,9 +201,10 @@
           "fr": "Algèbre linéaire"
         },
         "schedule": "Winter 2026",
+        "contentRef": "linear-algebra",
         "description": {
-          "en": "Here's some material for the course. The course covers basic concepts in Linear Algebra such as vector spaces, systems of linear equations, matrices and linear transformations.\n\n<br>\n\n| Fiche de TD | Corrections |\n|-------------|-------------|\n| [TD 1](./files/Fiche_1_2026.pdf) | [Solutions](./files/Fiche_1_cor.pdf) |\n| [TD 2](./files/Fiche_2_2026.pdf) | [Solutions](./files/Fiche_2_cor.pdf) |\n| [TD 3](./files/Fiche_3_2026.pdf)  | - |\n| TD 4 | - |\n| TD 5 | - |\n\n<br><br>\n\nHere are some pretty cool videos explaining some concepts in linear algebra with nice visualizations, credits to [3Blue1Brown](https://www.youtube.com/@3blue1brown).\n\n<br>\n\n<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/videoseries?si=pex2Bra91qg0ERtW&amp;list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>",
-          "fr": "Voici le matériel du cours. Le cours couvre les concepts de base de l'algèbre linéaire tels que les espaces vectoriels, les systèmes d'équations linéaires, les matrices et les transformations linéaires.\n\n<br>\n\n| Fiche de TD | Corrections |\n|-------------|-------------|\n| [TD 1](./files/Fiche_1_2026.pdf) | [Correction](./files/Fiche_1_cor.pdf) |\n| [TD 2](./files/Fiche_2_2026.pdf) | [Correction](./files/Fiche_2_cor.pdf) |\n| [TD 3](./files/Fiche_3_2026.pdf) | - |\n| TD 4 | - |\n| TD 5 | - |\n\n<br><br>\n\nVoici des vidéos très intéressantes qui expliquent certains concepts d'algèbre linéaire avec de belles visualisations, crédit à [3Blue1Brown](https://www.youtube.com/@3blue1brown).\n\n<br>\n\n<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/videoseries?si=pex2Bra91qg0ERtW&amp;list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>"
+          "en": "Content loaded from data/teaching/content/linear-algebra.en.md",
+          "fr": "Content loaded from data/teaching/content/linear-algebra.fr.md"
         },
         "keywords": [],
         "materials": []
